New posts + edited old

--- a/_posts/2012-11-24-prague-t.markdown
+++ b/_posts/2012-11-24-prague-t.markdown
@@ -15,16 +15,16 @@ image: /assets/images/2017/09/IMG_1135.jpg
 
 ## Транспорт
 
-Перелет из Екб со стыковкой в Шереметьево занял у нас примерно семь часов. В аэропорту Рузине нас упорно пытался наэцсамовать седовласый таксист, предлагая довезти до отеля за 550 czk (20 eur). В итоге мы купили тикеты на общественный автобус и добрались до места за 64 кроны. Профит.
+Перелет из Екб со стыковкой в Шереметьево занял примерно семь часов. В аэропорту Рузине нас упорно пытался прокатить седовласый таксист, предлагая довезти до отеля за 550 czk (20 eur). В итоге мы купили тикеты на общественный автобус и добрались до места за 64 кроны. Профит.
 
 Тикеты — отдельная тема. Мы долго тупили, пытаясь выбрать подходящий: билеты тут покупаются не на поездку, а на время. Тикет на 90 минут обошелся в 32 кроны на человека. Время начинает тикать с того момента, как ты пропечатаешь билет в специальном автомате, намертво прибитом к перилам внутри автобуса. В рамках времени, предусмотренного конкретным тикетом, можно совершать любое количество пересадок на любой вид общественного транспорта.
+
+- ![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3417.JPG)
+- ![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3419.JPG)
 
 Если планируете много передвигаться по Праге на трамваях и бусах — берите тикет на сутки за 110 крон. Главное, не забывайте нажать на кнопку открытия дверей на остановках — сами они не открываются, в целях экономии непонятно чего. Так что если вы внутри и забыли нажать на нужную кнопку — проедете мимо, если снаружи — не сядете на трамвай. Помимо прочего, люди, опыт имевшие, не рекомендуют зайцевать — жестокий и печальный штраф в 50 евро заставил их всё понять и покаяться.
 
 Уже по пути от Староместкой до Подольской набережной мы поняли, что Прагу можно описать тремя буквами: ЗБС. Но как то не хочется преждевременно заканчивать псто, поэтому, покажем вам наш отель, который не совсем отель, а [ботель (лодкотель) Рацек](http://www.booking.com/hotel/cz/racek.ru.html?aid=315714;label=hotel-77006-cz-dOo0qJ8mStXIUiBMmOQ*jgS1387707716:pl:ta:p1:p2:ac:ap1t1:neg;ws=&gclid=CNeqtJWe5rMCFUpb3godFDMAnw). Номера маленькие, вифи только в холле, завтраки скудные, но всё окупается забавным экспириенсом проживания в лодке, расположением в хорошем районе и низкой ценой (60 евро за двоих на три ночи).
-
-![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3417.JPG)
-![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3419.JPG)
 
 ## Прага для пражцев
 
