--- a/_posts/2012-12-09-berlin-tt.markdown
+++ b/_posts/2012-12-09-berlin-tt.markdown
@@ -9,9 +9,7 @@ tags:
 image: /assets/images/2017/09/brln0-1.jpg
 ---
 
-Если нас попросят коротко и исчерпывающе описать Берлин, получится примерно следующее.
-
-Огромный, дорогой, дурно пахнущий, запутанный, забомбленный тэгами город контрастов, строительных заборов и человеческой толчеи, очень похожий на Москву.Город, в котором стоит побывать однажды, чтобы посмотреть на шрамы истории, неразрывно связывающие столицу Германии с миром, в котором мы живем сегодня.
+Если меня попросят коротко и исчерпывающе описать Берлин, получится примерно следующее: огромный, дорогой, дурно пахнущий, запутанный, забомбленный тэгами город контрастов, строительных заборов и человеческой толчеи. Город, в котором стоит побывать, чтобы посмотреть на шрамы истории, неразрывно связывающие столицу Германии с миром, в котором мы живем сегодня.
 
 ![Немецкий флаг, Берлин, 2012](/assets/images/2017/09/IMG_1558.jpg)
 
