--- a/_posts/2013-03-10-in-bruges.markdown
+++ b/_posts/2013-03-10-in-bruges.markdown
@@ -8,13 +8,11 @@ tags:
 image: /assets/images/2017/09/IMG_1937.jpg
 ---
 
-Всего в 150 километрах от [Амстердама](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути") находится город [Антверпен](http://en.wikipedia.org/wiki/Antwerp), куда мы благополучно добрались за пару часов на автобусе от [Eurolines](http://www.eurolines.com/en/).
-
-Изучать сам Антверпен нам не очень то и хотелось, поэтому мы сразу направились на Ж/Д станцию, чтобы купить два билета до города, который был одной из самых желанных точек нашего путешествия. Сердитый дядька продал тикеты по смешной рождественской цене и отправил искать нужный состав на одной из многочисленных платформ шикарнейшего вокзала [Antwerpen Central](http://en.wikipedia.org/wiki/Antwerpen-Centraal_railway_station). Мы вдоволь насладились убранством станции, так как с поездом случился какой-то факап и мы уехали гораздо позже, чем предполагалось по расписанию, да еще и с пересадкой в [Генте](http://en.wikipedia.org/wiki/Ghent).
+В 150 километрах от [Амстердама](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути") находится город [Антверпен](http://en.wikipedia.org/wiki/Antwerp), куда мы добрались за пару часов на автобусе. Изучать Антверпен не было времени, поскольку впереди ждал Брюгге, который был высшей точкой всего путешествия.
 
 ![Антверпенский Централ, Бельгия, 2012](/assets/images/2017/09/IMG_0013.jpg)
 
-Попутно выяснилось, что Бельгия — вселенская столица алмазной промышленности. На станции и в ее окрестностях просто нереально купить что-либо, кроме бриллиантовых украшений и прочей ювелирки. Турок и прочих альтернативно окрашенных господ здесь, как и алмазов, даже больше, чем в Амстердаме. Видимо, все портовые страны этим страдают по понятным историческим обстоятельствам.
+Сердитый дядька продал тикеты по смешной рождественской цене, а задержавшийся поезд дал возможность обсмотреть шикарный вокзал [Antwerpen Central](http://en.wikipedia.org/wiki/Antwerpen-Centraal_railway_station). Попутно выяснилось, что Бельгия — вселенская столица алмазной промышленности. На станции и в ее окрестностях просто нереально купить что-либо, кроме бриллиантовых украшений и прочей ювелирки.
 
 > «I didn’t even know where Bruges fucking was. It’s in Belgium.»
 
