--- a/_posts/2018-10-23-kipr-1.markdown
+++ b/_posts/2018-10-23-kipr-1.markdown
@@ -50,9 +50,9 @@ image: /assets/images/2018/10/DSCF5216.jpg
 
 Третья по численности этническая группа — кошки. Их здесь уважают и кормят, поэтому вся набережная на 30% состоит из кошек, а пляжный песок — из зарытых котячьих какашек. Даже форма острова напоминает силуэт кота (но это я только что выдумал).
 
-![](/assets/images/2018/10/IMG_0352.jpg)
-![](/assets/images/2018/10/IMG_7101.jpeg)
 ![](/assets/images/2018/10/DSCF8818.jpg)
+- ![](/assets/images/2018/10/IMG_0352.jpg)
+- ![](/assets/images/2018/10/IMG_7101.jpeg)
 
 Ценник на жильё зависит от сезона. Зимой можно снять отличные апарты в 10 метрах от пляжа за 500€ в месяц. Летом придётся напрячься, чтобы найти что-то пристойное на третьей береговой линии в пределах 1000€. Цены в ресторанах вполне европейские, в магазинах — московские. Проезд на автобусе — 1.5€. Вино — от 3€.
 
