--- a/_posts/2018-11-07-kipr-2.markdown
+++ b/_posts/2018-11-07-kipr-2.markdown
@@ -68,8 +68,8 @@ image: /assets/images/2018/11/DSCF8975.jpg
 
 Летом снега нет, зато часто идут сильные дожди и образуется туман. Температура в горах на 15–20 градусов ниже, чем у побережья — можно немного остыть, отдохнуть от кондиционера, погулять по горным трейлам и посмотреть на природу.
 
-![](/assets/images/2018/11/DSCF9513.jpg)
-![](/assets/images/2018/11/DSCF9506.jpg)
+- ![](/assets/images/2018/11/DSCF9513.jpg)
+- ![](/assets/images/2018/11/DSCF9506.jpg)
 
 Кстати, природа на Кипре краше зимой, когда много осадков. Засушливым летом растительность устаёт и выглядит похмельной.
 
@@ -95,15 +95,15 @@ image: /assets/images/2018/11/DSCF8975.jpg
 
 Ещё одна точка Кипра, занесённая в список ЮНЕСКО — горная деревня [Какопетрия](https://goo.gl/maps/v6YFDZsENd32). Она делится на две части: старую и новую. В новой, как легко догадаться, новые дома, а в старой — старые. Интерес, разумеется, представляет именно старая Какопетрия, которая расположена на холме и состоит всего из одной улицы.
 
-![](/assets/images/2018/11/DSCF5408.jpg)
 ![](/assets/images/2018/11/DSCF5420.jpg)
+![](/assets/images/2018/11/DSCF5408.jpg)
 
 А вот горная деревня [Лефкара](https://goo.gl/maps/xui7CcYbRuy) — мекка для любителей кружева и серебряной бижутерии. Лично я таких сумасшедших не встречал, поэтому рекомендовать не стану. Однако, если будет по пути, можно заехать за неплохими видами, приятной архитектурой и уютными кафешками.
 
 ![](/assets/images/2018/11/DSCF5480.jpg)
-![](/assets/images/2018/11/DSCF8986.jpg)
-![](/assets/images/2018/11/DSCF9001.jpg)
 ![Вид на Лефкару и горную цепь Троодос](/assets/images/2018/11/DSCF5517.jpg)
+- ![](/assets/images/2018/11/DSCF8986.jpg)
+- ![](/assets/images/2018/11/DSCF9001.jpg)
 
 Вся горная дорога на 99% состоит из красивейших видов и крутых серпантинов. Поэтому возвращаться к побережью лучше засветло, а дальше ехать уже на следующий день.
 
@@ -112,14 +112,14 @@ image: /assets/images/2018/11/DSCF8975.jpg
 Этот красивейший [природный заповедник](https://goo.gl/maps/KA7G8p7wC1J2) находится на западе острова. Прогулка по ущелью займёт максимум пару часов, но вместе с дорогой по пересечённой местности может растянуться на целый день. Совместите эту поездку с визитом в Пафос и [Бухту Афродиты](https://goo.gl/maps/DpYxXTSL2YN2), если ещё там не бывали.
 
 ![](/assets/images/2018/11/DSCF9312-1.jpg)
-![](/assets/images/2018/11/DSCF9315.jpg)
-![](/assets/images/2018/11/DSCF9350.jpg)
 ![](/assets/images/2018/11/DSCF9346.jpg)
+- ![](/assets/images/2018/11/DSCF9315.jpg)
+- ![](/assets/images/2018/11/DSCF9350.jpg)
 
 Горный поток так расточил известняковую породу, что получились естественные стены высотой до 30 метров. На стенах — красивые паттерны и градиенты. Под ногами — тот самый горный поток, из-за которого в ущелье прохладно даже в жаркую погоду.
 
-![](/assets/images/2018/11/DSCF9398.jpg)
-![](/assets/images/2018/11/IMG_0413.jpg)
+- ![](/assets/images/2018/11/DSCF9398.jpg)
+- ![](/assets/images/2018/11/IMG_0413.jpg)
 
 Летом здесь много туристов, что наверняка испортит всё удовольствие. Зимой вход закрыт жёлтой полицейской лентой из-за опасности бурного потока, но если вы любите приключения, то легко преодолеете это грозное препятствие. Мы без труда дошли до самой интересной точки ущелья, лишь слегка намочив ноги.
 
