--- a/_posts/2019-01-07-2k18.markdown
+++ b/_posts/2019-01-07-2k18.markdown
@@ -17,9 +17,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Год начался и закончился на Кипре. За три визита остров стал почти родным. Идеальное место, чтобы погреть кости и отдохнуть от даров цивилизации. Ближе Юго-восточной Азии, дешевле европейских курортов и гораздо теплее базовой страны.
 
-![](/assets/images/2019/01/DSCF7309.jpg)
-![](/assets/images/2019/01/DSCF5335.jpg)
 ![](/assets/images/2019/01/DSCF5221.jpg)
+- ![](/assets/images/2019/01/DSCF7309.jpg)
+- ![](/assets/images/2019/01/DSCF5335.jpg)
 
 Исколесил остров во всех плоскостях и написал два поста о самых крутых местах. Прочтите, если намереваетесь с визитом:
 
@@ -60,10 +60,10 @@ image: /assets/images/2019/01/DSCF9046.jpg
 ![](/assets/images/2019/01/DSCF3574-1.jpg)
 ![](/assets/images/2019/01/DSCF7164.jpg)
 ![](/assets/images/2019/01/DSCF1167.jpg)
-![](/assets/images/2019/01/DSCF6908.jpg)
-![](/assets/images/2019/01/DSCF7258.jpg)
 ![](/assets/images/2019/01/DSCF6914.jpg)
 ![Пражская зима](/assets/images/2019/01/DSCF7144.jpg)
+- ![](/assets/images/2019/01/DSCF6908.jpg)
+- ![](/assets/images/2019/01/DSCF7258.jpg)
 
 Новый пост о Праге я не написал, но есть старые из 2012 года:
 
@@ -76,11 +76,11 @@ image: /assets/images/2019/01/DSCF9046.jpg
 - [Чески Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
 
 ![](/assets/images/2019/01/DSCF1061.jpg)
-![](/assets/images/2019/01/DSCF6645.jpg)
 ![](/assets/images/2019/01/DSCF0970.jpg)
-![](/assets/images/2019/01/DSCF1480.jpg)
-![](/assets/images/2019/01/DSCF0945.jpg)
 ![Разные уголки Чехии](/assets/images/2019/01/DSCF6707.jpg)
+- ![](/assets/images/2019/01/DSCF1480.jpg)
+- ![](/assets/images/2019/01/DSCF0945.jpg)
+- ![](/assets/images/2019/01/DSCF6645.jpg)
 
 Теперь переезд в Чехию — цель на ближайшие десять лет.
 
@@ -91,9 +91,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 ![](/assets/images/2019/01/DSCF2908-1.jpg)
 ![](/assets/images/2019/01/DSCF3097-1.jpg)
 ![](/assets/images/2019/01/DSCF3083-1.jpg)
-![](/assets/images/2019/01/DSCF2376-3.jpg)
-![](/assets/images/2019/01/DSCF2520-2.jpg)
 ![](/assets/images/2019/01/DSCF2287-1.jpg)
+- ![](/assets/images/2019/01/DSCF2376-3.jpg)
+- ![](/assets/images/2019/01/DSCF2520-2.jpg)
 
 Старые посты из Берлина и Дрездена:
 
@@ -105,9 +105,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Ещё три месяца провели на руинах Речи Посполитой, успели посмотреть три города. Варшаву нашли неуютной, в Кракове дурная экология, поэтому на будущее выбрали Вроцлав.
 
-![](/assets/images/2019/01/DSCF5863.jpg)
-![](/assets/images/2019/01/DSCF5887.jpg)
 ![Осень в Польше](/assets/images/2019/01/DSCF5835.jpg)
+- ![](/assets/images/2019/01/DSCF5863.jpg)
+- ![](/assets/images/2019/01/DSCF5887.jpg)
 
 Заехали в Аушвиц-Биркенау и немного охуели. Побывали в Татрах — это такие горы на границе Польши и Словакии.
 
@@ -154,8 +154,8 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 В январе [Аутмаркетингу](http://outmarketing.ru) исполнится два года. Дела идут не слишком хорошо, но и не совсем погано. Среди клиентов Яндекс, Лего и одна большая соцсеть, но пока мы качали только свои скилы, а надо качать бизнес и команду.
 
-![](/assets/images/2019/01/_DSC0076.jpg)
-![](/assets/images/2019/01/_DSC0109.jpg)
+![](/assets/images/2019/01/DSC0076.jpg)
+![](/assets/images/2019/01/DSC0109.jpg)
 
 Мы с [Антоном](https://www.facebook.com/a.shayakhov) успели поработать во всяких крутых компаниях, но к предпринимательству нас жизнь не подготовила. Наделали кучу ошибок и несколько раз были на сантиметр от закрытия. Кажется, многое поняли и теперь знаем, что делать.
 
@@ -163,12 +163,14 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Попутно стали многосерийными предпринимателями — запустили фановый сайдпроект [sameshirt\*](http://sameshirt.ru/) — пять чёрных футболок с доставкой. Получилось кайфово, но денег он практически не приносит, потому что не хватает времени.
 
-![](/assets/images/2019/01/DSCF5109.jpg)
 ![](/assets/images/2019/01/DSCF5119.jpg)
+- ![](/assets/images/2019/01/DSCF5109.jpg)
+- ![](/assets/images/2019/01/DSCF5748.jpg)
+
 
 В начале года занялся личными инвестициями. Скопил хорошую финансовую подушку и начал складывать по 20% дохода в акции. Сейчас рынок сильно трясёт, поэтому прибыль отрицательная, но статистика говорит, что без резких телодвижений уйти в минус на горизонте десяти лет довольно сложно.
 
-![](/assets/images/2019/01/DSCF5748.jpg)
+
 ![](/assets/images/2019/01/Screenshot-2019-01-07-at-21.16.15.png)
 
 К концу года понял, что целеполагание даёт хотя бы какое-то ощущение контроля, поэтому серьёзно запарился за планирование. Надеюсь успеть и узнать больше, чем в прошлом году.
@@ -178,8 +180,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 Новый год встретил в горах и в отличной компании. Лучший финал сложно придумать. Посмотрю на этот пост 365 дней спустя, и удивлюсь тому, как было охуенно.
 
 ![](/assets/images/2019/01/DSCF7453.jpg)
-![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
 
 Ссылку на прошлогодний пост тоже оставлю — специально для тех, кто любит копаться в чужой жизни: [50 фотографий из 2017](/blog/2k17/).
+
+![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
 
 Увидимся!
