--- a/_posts/2020-04-26-italia.markdown
+++ b/_posts/2020-04-26-italia.markdown
@@ -115,9 +115,9 @@ image: /assets/images/2020/04/IMG_6879-1.jpg
 Весь город живёт вокруг великой шекспировской пьесы. Базилика Ромео и Джульетты, дом Капулетти, Балкон Джульетты и, конечно, могила Джульетты. Хотя и без этого в городе есть что посмотреть.
 
 ![](/assets/images/2020/04/IMG_6523-1.jpg)
-![](/assets/images/2020/04/IMG_6563-1.jpg)
-![](/assets/images/2020/04/IMG_6618-1.jpg)
 ![](/assets/images/2020/04/IMG_6640-1.jpg)
+- ![](/assets/images/2020/04/IMG_6563-1.jpg)
+- ![](/assets/images/2020/04/IMG_6618-1.jpg)
 
 Восхитительные мосты [Ponte Pietra](https://goo.gl/maps/fMNsWoq8md5KJXt86) и [Ponte di Castelvecchio](https://goo.gl/maps/AJZoqTswWCDLBSXG9). Отлично сохранившаяся [веронская арена](https://goo.gl/maps/Upvh6dspHG1dtPkVA). Замок [Кастельвеккио](https://g.page/MuseoCastelvecchio?share). Но лучшее — вид на город с высоты [Santuario della Nostra Signora di Lourdes](https://goo.gl/maps/KwEesPrGNNK8G57a9).
 
