--- a/_posts/2020-05-12-germania-75.markdown
+++ b/_posts/2020-05-12-germania-75.markdown
@@ -21,19 +21,19 @@ image: /assets/images/2020/05/DSCF2908.jpg
 <ul><li><a href="../berlin-tt/index.html">Первые впечатления о Берлине</a></li><li><a href="../berlin-sights/index.html">Достопримечательности Берлина</a></li></ul>За последние два года я возвращался в Берлин трижды, разглядел город с других сторон и сильно поменял своё отношение. Сегодня он кажется мне одним из самых уютных, комфортных и интересных мест в Европе, где каждый найдёт себе лайфстайл и досуг по душе.
 
 ![](/assets/images/2020/05/DSCF3085.jpg)
-![](/assets/images/2020/05/DSCF9306.jpg)
 
 Город довольно чётко зонирован. Есть районы, где не прекращается дикая тусовка, спокойные спальники для мидл-класса, рабочие окраины и тонна классных общественных пространств, которые объединяют этих разных персонажей без ощутимого расслоения.
 
 ![](/assets/images/2020/05/DSCF3037.jpg)
-![](/assets/images/2020/05/DSCF3132.jpg)
-![](/assets/images/2020/05/DSCF3144.jpg)
 ![](/assets/images/2020/05/DSCF3135.jpg)
+- ![](/assets/images/2020/05/DSCF3132.jpg)
+- ![](/assets/images/2020/05/DSCF3144.jpg)
 
 В Берлине сохранилось не так много предметов древности, но их место заняла неповторимая атмосфера бывшего демаркационного города, объекты современного искусства, постоянные культурные ивенты, ощущение полной свободы и вечного творческого балагана.
 
 ![](/assets/images/2020/05/DSCF9285.jpg)
-![](/assets/images/2020/05/DSCF9310.jpg)
+- ![](/assets/images/2020/05/DSCF9310.jpg)
+- ![](/assets/images/2020/05/DSCF9306.jpg)
 
 Отлично спланированная городская среда делает пешие шпацеры приятным рекреационным занятием. Берлин — огромный город, но в отличие от Москвы он не давит перегруженной транспортной системой и тиранией стеклобетонного необрутализма.
 
@@ -113,13 +113,13 @@ image: /assets/images/2020/05/DSCF2908.jpg
 
 Позже — евреи, военнопленные и другие жертвы нацистского террора. Всего — почти 200 тысяч человек, которых изнуряли тяжёлой работой, ужасными условиями и античеловеческими медицинскими экспериментами с частым летальным исходом.
 
-![](/assets/images/2020/05/DSCF2861.jpg)
 ![](/assets/images/2020/05/DSCF2864.jpg)
 
 Американские военные, освободившие лагерь в 1945, были настолько поражены картиной, что убили больше 120 сдавшихся солдат SS, ещё 40 голыми руками разорвали бывшие узники. Один из пулемётчиков открыл прямой огонь по пленным фашистам из тридцатого калибра.
 
 ![](/assets/images/2020/05/DSCF2867.jpg)
-![](/assets/images/2020/05/DSCF2848.jpg)
+- ![](/assets/images/2020/05/DSCF2848.jpg)
+- ![](/assets/images/2020/05/DSCF2861.jpg)
 
 Немцы не прячут неприятные моменты истории, поэтому в главном корпусе открыт музей, подробно описывающий все ужасы концлагеря. Сохранены два барака узников, газовые печи, крипты и двойной периметр колючки. Вход на территорию и в музей — бесплатный.
 
@@ -134,19 +134,20 @@ image: /assets/images/2020/05/DSCF2908.jpg
 
 Сам замок Нойшванштайн — фантазия инфантильного короля Людвига II. Истории за замком мало — он построен по капризу монаршей особы в конце XIX века на месте руин двух крепостей. Выдержан в средневековом стиле, пропущенном через призму романтизма.
 
-![](/assets/images/2020/05/DSCF2942.jpg)
-
 Король провёл в замке всего 172 дня, после чего скоропостижно преставился. Проект был настолько амбициозным, что стройка вылезла из всех бюджетов и дедлайнов, ввергла коммуну в долги и не была полностью завершена по первоначальному макету.
 
 Издали замок впечатляет масштабом и гротескностью архитектуры на фоне гор и водопадов. Но вблизи и изнутри кажется пластиковым новоделом. Экскурсия по замку — самое большое разочарование. Лучше посмотреть на замок с узкого мостика <a href="https://goo.gl/maps/ifeMgA8ohmSgNWXP9?ref=shouldgo.me">Мариенбрюке</a>.
 
-![](/assets/images/2020/05/IMG_7408.jpg)Внизу в долине расположена коммуна Швангау, озеро <a href="https://goo.gl/maps/vJRNt27PMGga9hTk9?ref=shouldgo.me">Альпензее</a> и замок <a href="https://ru.wikipedia.org/wiki/Хоэншвангау_(замок)?ref=shouldgo.me">Хоэншвангау</a>. Вечером в этой местности чувствуешь себя в настоящей сказке, главные герои которой — альпийские сопки и вековые сосны, которые хором хохочут над твоей скоротечностью.
-
+![](/assets/images/2020/05/IMG_7408.jpg)
 ![](/assets/images/2020/05/DSCF2917.jpg)
-![](/assets/images/2020/05/DSCF2951.jpg)
+
+Внизу в долине расположена коммуна Швангау, озеро <a href="https://goo.gl/maps/vJRNt27PMGga9hTk9?ref=shouldgo.me">Альпензее</a> и замок <a href="https://ru.wikipedia.org/wiki/Хоэншвангау_(замок)?ref=shouldgo.me">Хоэншвангау</a>. Вечером в этой местности чувствуешь себя в настоящей сказке, главные герои которой — альпийские сопки и вековые сосны, которые хором хохочут над твоей скоротечностью.
+
 ![](/assets/images/2020/05/DSCF2955.jpg)
 ![](/assets/images/2020/05/IMG_7435.jpg)
 ![](/assets/images/2020/05/DSCF2932.jpg)
+- ![](/assets/images/2020/05/DSCF2951.jpg)
+- ![](/assets/images/2020/05/DSCF2942.jpg)
 
 Городок <a href="https://goo.gl/maps/CWPCXtwhAHPeo6Fv8?ref=shouldgo.me">Фюссен</a>, из которого отбывает обратный поезд, тоже до рези в глазах красив и дразнит вычурными сграфитто своих фасадов. Это место, где хочется замереть и перестать жить в том ритме, к которому тебя приучила цивилизация.
 
