--- a/_posts/2020-01-13-2k19.markdown
+++ b/_posts/2020-01-13-2k19.markdown
@@ -18,16 +18,17 @@ image: /assets/images/2020/01/DSCF1031.jpg
 Начало было легендарным: встретили год на любимом острове с любимыми людьми, сожгли одну крышу, попали в одну аварию, разбили один телефон и утопили один беспроводной наушник. А прямо перед новым годом сломался целый дом и моя жопа.
 
 ![](/assets/images/2020/01/DSCF7503.jpg)
-![](/assets/images/2020/01/DSCF7663.jpg)
-![](/assets/images/2020/01/DSCF8621-2.jpg)
+- ![](/assets/images/2020/01/DSCF7663.jpg)
+- ![](/assets/images/2020/01/DSCF8621-2.jpg)
+
 ![](/assets/images/2020/01/DSCF8662-1.jpg)
 ![](/assets/images/2020/01/DSCF8558-6.jpg)
 ![](/assets/images/2020/01/DSCF8076-1.jpg)
 
 Вопреки географии, январь был холодным. Настолько, что жертвой пал масляный обогреватель, а горы щедрым слоем засыпал снег.
 
-![](/assets/images/2020/01/DSCF7984.jpg)
 ![](/assets/images/2020/01/DSCF7466-1.jpg)
+![](/assets/images/2020/01/DSCF7984.jpg)
 
 ## Кранч длинною в год
 
@@ -49,29 +50,30 @@ image: /assets/images/2020/01/DSCF1031.jpg
 
 Пять месяцев прожили во Вроцлаве. Во время первого визита в Польшу бывший немецкий Бреслау в Нижней Силезии показался самым подходящим для жизни: мягкий климат, хорошая экология, четыре часа до Праги и Берлина. Что могло пойти не так?
 
-![](/assets/images/2020/01/DSCF8893.jpg)
 ![](/assets/images/2020/01/DSCF9331.jpg)
+- ![](/assets/images/2020/01/DSCF9409.jpg)
+- ![](/assets/images/2020/01/DSCF8893.jpg)
+
 ![](/assets/images/2020/01/DSCF9086-1.jpg)
-![](/assets/images/2020/01/DSCF9409.jpg)
-![](/assets/images/2020/01/DSCF9243.jpg)
-![](/assets/images/2020/01/DSCF0245-1.jpg)
+- ![](/assets/images/2020/01/DSCF9243.jpg)
+- ![](/assets/images/2020/01/DSCF0245-1.jpg)
 
 Четвёртый по величине город Польши оказался слишком тесным и замкнутым в себе. Несмотря на бурное развитие и претензию на статус польской кремниевой долины, Вроцлав сильно отдавал провинцией, а местами напоминал Уралмаш времён моей молодости.
 
-![](/assets/images/2020/01/DSCF0207.jpg)
 ![](/assets/images/2020/01/DSCF9049.jpg)
 ![](/assets/images/2020/01/DSCF9278-1.jpg)
-![](/assets/images/2020/01/DSCF9233-1.jpg)
+- ![](/assets/images/2020/01/DSCF9233-1.jpg)
+- ![](/assets/images/2020/01/DSCF0207.jpg)
 
 Насытившись этой малоприятной аналогией, мы решили переместить свою бренную жизнь в Краков — сильно бывшую столицу Речи Посполитой. Снова потеряли время, привычный быт, залог за квартиру и опять попали в петлю фрустрации и бюрократии.
 
-![](/assets/images/2020/01/DSCF1071.jpg)
 ![](/assets/images/2020/01/DSCF1488.jpg)
+![](/assets/images/2020/01/DSCF1071.jpg)
 
 К счастью, вторая попытка оказалась удачной, и мы обрели место, удовлетворяющий нашему стилю жизни (а ещё прекрасную квартиру с террасой и редким для местных широт центральным отоплением).
 
-![](/assets/images/2020/01/DSCF0843.jpg)
-![](/assets/images/2020/01/DSCF1126.jpg)
+- ![](/assets/images/2020/01/DSCF0843.jpg)
+- ![](/assets/images/2020/01/DSCF1126.jpg)
 
 Единственная проблема: за годы скитаний я привык к кочевой жизни и чувствую постоянную потребность куда-нибудь переехать. Но в ближайшие годы сил на это уже не хватит.
 
@@ -82,33 +84,33 @@ image: /assets/images/2020/01/DSCF1031.jpg
 В перерывах между работой, учёбой и переездами, успели посетить несколько мест разной степени туристической привлекательности. Трижды побывали в Праге (и с каждым разом влюблялись в неё всё сильнее) и дважды — в Берлине (с аналогичным эффектом).
 
 ![](/assets/images/2020/01/DSCF8977.jpg)
-![](/assets/images/2020/01/DSCF8979.jpg)
-![](/assets/images/2020/01/DSCF8983.jpg)
 ![](/assets/images/2020/01/DSCF9873.jpg)
+- ![](/assets/images/2020/01/DSCF8979.jpg)
+- ![](/assets/images/2020/01/DSCF8983.jpg)
 
 Провели прекрасный июльский уикенд в Париже, который сгладил резко негативное отношение к французской столице, оставшееся после первого визита в 2014 году.
 
 ![](/assets/images/2020/01/DSCF9635.jpg)
-![](/assets/images/2020/01/DSCF9567.jpg)
-![](/assets/images/2020/01/DSCF9651.jpg)
+- ![](/assets/images/2020/01/DSCF9567.jpg)
+- ![](/assets/images/2020/01/DSCF9651.jpg)
 
 Не обошли вниманием (но обделили любовью) город Будапешт, который показался скучным, неопрятным и слишком неевропейским.
 
-![](/assets/images/2020/01/DSCF0634.jpg)
 ![](/assets/images/2020/01/DSCF0736.jpg)
+![](/assets/images/2020/01/DSCF0634.jpg)
 
 Путешествовали по Польше. Начиная с Варшавы, которая с каждым разом нравилась всё меньше. Продолжая Катовице и Валбжихом, которые не разочаровали. Заканчивая замками и национальными парками, которые восхищали. В Польше невероятно красивая природа и отличная инфраструктура для приключений выходного дня.
 
-![](/assets/images/2020/01/DSCF0353.jpg)
-![](/assets/images/2020/01/DSCF0361.jpg)
-![](/assets/images/2020/01/DSCF9863.jpg)
-![](/assets/images/2020/01/DSCF9153.jpg)
-![](/assets/images/2020/01/DSCF9161.jpg)
-![](/assets/images/2020/01/DSCF9821-1.jpg)
-![](/assets/images/2020/01/DSCF1472-1.jpg)
-![](/assets/images/2020/01/DSCF1483-1.jpg)
-![](/assets/images/2020/01/DSCF9739-1.jpg)
-![](/assets/images/2020/01/DSCF9767-1.jpg)
+- ![](/assets/images/2020/01/DSCF0353.jpg)
+- ![](/assets/images/2020/01/DSCF0361.jpg)
+- ![](/assets/images/2020/01/DSCF9863.jpg)
+- ![](/assets/images/2020/01/DSCF9153.jpg)
+- ![](/assets/images/2020/01/DSCF9161.jpg)
+- ![](/assets/images/2020/01/DSCF9821-1.jpg)
+- ![](/assets/images/2020/01/DSCF1472-1.jpg)
+- ![](/assets/images/2020/01/DSCF1483-1.jpg)
+- ![](/assets/images/2020/01/DSCF9739-1.jpg)
+- ![](/assets/images/2020/01/DSCF9767-1.jpg)
 
 Жизнь интроверта на чужбине — это добровольная изоляция. Поэтому хочу сказать спасибо друзьям, которые приезжали в гости, звали в поездки и помогали растопить одиночество: Игоряну, Ване, Никите, Саше, Шасе, Элис, Серёге, Вите и его семье. И ещё куче людей, встречи с кем были спонтанными и приятными. Спасибо.
 
@@ -124,10 +126,11 @@ image: /assets/images/2020/01/DSCF1031.jpg
 
 Новый год встретил в горах и снова в отличной компании. Увидели снег, который в Кракове по сей день не выпал и не собирается.
 
-![](/assets/images/2020/01/DSCF1275.jpg)
 ![](/assets/images/2020/01/DSCF1288.jpg)
-![](/assets/images/2020/01/DSCF1356.jpg)
-![](/assets/images/2020/01/DSCF1388.jpg)
 ![](/assets/images/2020/01/DSCF1368.jpg)
+- ![](/assets/images/2020/01/DSCF1388.jpg)
+- ![](/assets/images/2020/01/DSCF1275.jpg)
 
 На 2020 пожелаю себе побольше эссенциализма: разобраться с текущими делами, осознать свои желания и сконцентрироваться.
+
+![](/assets/images/2020/01/DSCF1356.jpg)
