--- a/_posts/2022-03-10-fuck-war.markdown
+++ b/_posts/2022-03-10-fuck-war.markdown
@@ -8,7 +8,7 @@ tags:
 image: /assets/images/2022/03/DSCF6061.jpg
 ---
 
-Хотел написать большой пост на английском с разбором ситуации глазами россиянина для друзей из других стран. Но какой смысл? Сейчас важне взгляд украинского народа. И важно донести его до моих сограждан.
+Хотел написать большой пост на английском с разбором ситуации глазами россиянина для друзей из других стран. Но какой смысл? Сейчас важен взгляд украинского народа. И важно донести его до моих сограждан.
 
 ![](/assets/images/2022/03/DSCF6025.jpg)
 
