--- a/_posts/2025-04-30-fuji-x100vi.markdown
+++ b/_posts/2025-04-30-fuji-x100vi.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Фотобложек возвращается!
+title: Фотоблог возвращается!
 date: '2025-04-30 09:08:02'
 tags:
 - photo
@@ -8,13 +8,13 @@ tags:
 image: /assets/images/2025/04/DSCF1067.jpg
 ---
 
-Этот блог начался в 2009 году — ещё во времена ЖЖ. За 16 лет несколько раз сменилась платформа, хостинг, доменная зону, моя локация и даже майндсет. Но неизменной осталаётся моя любовь к фотографии и графомании!
+Этот блог начался в 2009 году — ещё во времена ЖЖ. За 16 лет несколько раз сменилась платформа, хостинг, доменная зону, моя локация и даже майндсет. Но неизменной остаётся моя любовь к фотографии и графомании!
 
 ![](/assets/images/2025/04/DSCF1067.jpg)
 
 Фотографией я увлекся аж в 2008 года — когда взял свой первый кредит и купил свой первый зеркальный сапог 450д с тухлой китовой линзой 18-55. Древние [следы](/blog/the-yellowfield/) моих [первых](/blog/photowinter/) экспериментов с [камерой](/blog/unplugged_photo/) всё ещё можно [найти](/blog/trespassing-winter/) в [недрах](/blog/new_photostuff/) этого [блога](/blog/maydays/).
 
-За всё время я попробовал много техники. Был 50D с уьлтраширом 10-22 и телезумом 55-250, 5D Mark II с 24-105 L, куча расходных полтяшков, заёмные фишаи и 35мм объективы, пыха 580EX II и всякие DIY-аксессуры.
+За всё время я попробовал много техники. Был 50D с уьлтрашироким 10-22 и телезумом 55-250, 5D Mark II с 24-105 L, куча расходных полтяшков, заёмные фишаи и 35мм объективы, пыха 580EX II и всякие DIY-аксессуры.
 
 По пути было много плёночки: Зениты, ФЭДы, Москва, Helga и любимая Mamiya ZE с жирным боке от Sekor 50mm f/2 и зерном от Ilford Pan 400. Немного плёночных фотографий даже оцифровалось [в отдельный блог-пост](/blog/film_photos_from_the_past/).
 
@@ -25,9 +25,9 @@ image: /assets/images/2025/04/DSCF1067.jpg
 
 Потом я дропнул свой про-гир за любительский X-T10 с 18-55 из первой линейки беззеркалок Fuji, и пережил с ним 9 лет путешествий, начавшихся временным [переездом в Таиланд](/blog/post-phuket/), и увенчавшихся [переездом в Польшу на ПМЖ](/blog/love-poland/).
 
-Пока умирал фуджик, успела случиться [пандемия COVID-19](/blog/2k20/), началась [полномасштабеая война в Украине](/blog/fuck-war/), а айфоны научились чудесам вычислительной фотографии, но мне никогда не нравился их гладенький процесс и результат.
+Пока умирал фуджик, успела случиться [пандемия COVID-19](/blog/2k20/), началась [полномасштабная война в Украине](/blog/fuck-war/), а айфоны научились чудесам вычислительной фотографии, но мне никогда не нравился их гладенький процесс и результат.
 
-Поэтому я остался со старым телефоном, и выпросил в подарок новый Fuji X100VI — аппарат, который практически невозможно раздобыть, заделаннымй под ретро-дальномер с фиксом 35 f/2 и гибридным видоискателем.
+Поэтому я остался со старым телефоном, и выпросил в подарок новый Fuji X100VI — аппарат, который практически невозможно раздобыть, заделанный под ретро-дальномер с фиксом 35 f/2 и гибридным видоискателем.
 
 - ![](/assets/images/2025/04/DSCF0648.jpg)
 - ![](/assets/images/2025/04/DSCF0627.jpg)
